--- a/css/split.css
+++ b/css/split.css
@@ -12,7 +12,25 @@ body {
   font-family: condor-compressed, sans-serif;
   font-weight: 300;
   text-transform: uppercase;
-  padding: 5rem 0;
+  padding: 0;
+  line-height: 1;
+  backface-visibility: hidden;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: -moz-none;
+  -o-user-select: none;
+  user-select: none;
+  background-size: 80%;
+}
+
+.content__type--first {
+  font-size: 7vw;
+  margin: 0 auto;
+  text-align: justify;
+  font-family: condor-compressed, sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 0;
   line-height: 1;
   backface-visibility: hidden;
   -webkit-user-select: none;
@@ -24,6 +42,7 @@ body {
 }
 
 .content__type-special {
+  font-family: condor-compressed, sans-serif;
   font-size: 29vw;
   display: block;
   margin: 0 auto;
@@ -45,7 +64,7 @@ body {
 
 .fold {
   overflow: hidden;
-  height: 60vh;
+  height: 85vh;
   /*  half the fold-scroller width */
   width: 30vw;
 }
